Se agregan cambio a la sección de footer: Imagen de fondo y posición de iconos

--- a/Proyecto/index.html
+++ b/Proyecto/index.html
@@ -127,12 +127,20 @@
     </main>
     <hr />
     <footer class="footer">
-      <h2 class="titulofooter">Dirección: Transversal 2c #14c 38. Villas del Sutagao. Fusagasugá-Cundinamarca</h2>
-      <h2 class="titulofooter">Teléfono/Whatsapp: <i class="bi bi-whatsapp">30000000</i></h2>
-      <h2 class="titulofooter">Horario de atención: Lunes a Sábado de 8:00 am a 6:00 pm</h2>
+      <section>
+        <article id="textofooter">
+          <h2 class="titulofooter">Dirección: Transversal 2c #14c 38. Villas del Sutagao. Fusagasugá-Cundinamarca</h2>
+          <h2 class="titulofooter">Teléfono/Whatsapp: <i class="bi bi-whatsapp">30000000</i></h2>
+          <h2 class="titulofooter">Horario de atención: Lunes a Sábado de 8:00 am a 6:00 pm</h2>
+        </article>
+      </section>
       <br>
-      <img class="IMG_footer" src="Imagenes/instagram.svg">
-      <img class="IMG_footer" src="Imagenes/facebook.svg">
+      <section>
+        <article id="iconos">
+          <img class="IMG_footer" src="Imagenes/instagram.svg">
+          <img class="IMG_footer" src="Imagenes/facebook.svg">
+        </article>
+      </section>
     </footer>
   </body>
 </html>
