--- a/Proyecto/registroClientes.html
+++ b/Proyecto/registroClientes.html
@@ -28,7 +28,7 @@
           <nav class="navegacion">
             <div>
               <ul class="menu">
-                <li><a href="/inicio.html" style="padding: 5px">Inicio</a>
+                <li><a href="/index.html" style="padding: 5px">Inicio</a>
                 <li><a href="/galeria.html" style="padding: 5px">Galeria</a>
                   <ul class="submenu">
                     <li><a style="padding: 15px" href="/GaleriaHTML/chocoFresas.html">Choco Fresas</a></li>
