Se cambia tipo de letra a monserrat y se vincula estilos google fonts a las paginas Galeriahtml

--- a/Proyecto/GaleriaHTML/corazones.html
+++ b/Proyecto/GaleriaHTML/corazones.html
@@ -7,6 +7,10 @@
     <title>Torta Paleta - Freya</title>
     <link rel="stylesheet" href="/CSS/galeriaIMG.css">
     <link rel="stylesheet" href="/CSS/estilos.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Gluten:wght@500&family=Montserrat:wght@500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Ephesis&display=swap" rel="stylesheet">
 </head>
 <header>
     <div class="contenedor-header">
