--- a/Proyecto/GaleriaHTML/chocoFresas.html
+++ b/Proyecto/GaleriaHTML/chocoFresas.html
@@ -7,6 +7,10 @@
     <title>ChocoFresas - Freya</title>
     <link href="/CSS/estilos.css" rel="stylesheet">
     <link href="/CSS/galeriaIMG.css" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Gluten:wght@500&family=Montserrat:wght@500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Ephesis&display=swap" rel="stylesheet">
     
 </head>
 <header>
