se arregla pagina contacto

--- a/Proyecto/GaleriaHTML/chocoFresas.html
+++ b/Proyecto/GaleriaHTML/chocoFresas.html
@@ -24,8 +24,8 @@
         <nav class="navegacion">
           <div>
             <ul class="menu">
-              <li><a href="/index.html" style="padding: 5px">Inicio</a>
-              <li><a href="/galeria.html" style="padding: 5px">Galeria</a>
+              <li><a href="/index.html">Inicio</a>
+              <li><a href="/galeria.html">Galeria</a>
                 <ul class="submenu">
                   <li><a style="padding: 15px" href="/GaleriaHTML/chocoFresas.html">Choco Fresas</a></li>
                   <li><a style="padding: 15px" href="/GaleriaHTML/corazones.html" >Corazones</a></li>
@@ -36,9 +36,9 @@
                   <li><a style="padding: 15px" href="#">Cajas</a></li>
                 </ul>
               </li>
-              <li><a href="/tienda.html" style="padding: 5px">Tienda</a></li>
-              <li><a href="/registroClientes.html" style="padding: 5px">Registrate</a></li>
-              <li><a href="/contacto.html" style="padding: 5px">Contáctanos</a></li>
+              <li><a href="/tienda.html">Tienda</a></li>
+              <li><a href="/registroClientes.html">Registrate</a></li>
+              <li><a href="/contacto.html">Contáctanos</a></li>
             </ul>
           </div>
         </nav>
