Mejoran los estilos

--- a/Proyecto/GaleriaHTML/chocoFresas.html
+++ b/Proyecto/GaleriaHTML/chocoFresas.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=, initial-scale=1.0">
     <title>ChocoFresas - Freya</title>
-    <link href="/CSS/estilos.css" rel="stylesheet">
-    <link href="/CSS/galeriaIMG.css" rel="stylesheet">
+    <link href="../CSS/estilos.css" rel="stylesheet">
+    <link href="../CSS/galeriaIMG.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Gluten:wght@500&family=Montserrat:wght@500&display=swap" rel="stylesheet">
@@ -16,7 +16,7 @@
 <header>
     <div class="contenedor-header">
       <div class="contenedor-logo">
-        <img src="/Imagenes/Logo.png" height="180px" alt="Freya" style="float: left" /> 
+        <img src="../Imagenes/Logo.png" height="180px" alt="Freya" style="float: left" /> 
       </div>
       <div class="contenedor-menu">
         <input type="checkbox" id="boton-menu" />
@@ -24,21 +24,21 @@
         <nav class="navegacion">
           <div>
             <ul class="menu">
-              <li><a href="/index.html">Inicio</a>
-              <li><a href="/galeria.html">Galeria</a>
+              <li><a href="../index.html">Inicio</a>
+              <li><a href="../galeria.html">Galeria</a>
                 <ul class="submenu">
-                  <li><a style="padding: 15px" href="/GaleriaHTML/chocoFresas.html">Choco Fresas</a></li>
-                  <li><a style="padding: 15px" href="/GaleriaHTML/corazones.html" >Corazones</a></li>
-                  <li><a style="padding: 15px" href="/GaleriaHTML/licores.html" >Bebidas</a></li>
-                  <li><a style="padding: 15px" href="/GaleriaHTML/chocoSorpresa.html">Choco Piñata</a></li>
-                  <li><a style="padding: 15px" href="/GaleriaHTML/tortaPaleta.html">Torta Paleta</a></li>
-                  <li><a style="padding: 15px" href="/GaleriaHTML/variedad.html">Figuras Especiales</a></li>
+                  <li><a style="padding: 15px" href="../GaleriaHTML/chocoFresas.html">Choco Fresas</a></li>
+                  <li><a style="padding: 15px" href="../GaleriaHTML/corazones.html" >Corazones</a></li>
+                  <li><a style="padding: 15px" href="../GaleriaHTML/licores.html" >Bebidas</a></li>
+                  <li><a style="padding: 15px" href="../GaleriaHTML/chocoSorpresa.html">Choco Piñata</a></li>
+                  <li><a style="padding: 15px" href="../GaleriaHTML/tortaPaleta.html">Torta Paleta</a></li>
+                  <li><a style="padding: 15px" href="../GaleriaHTML/variedad.html">Variedades</a></li>
                   <li><a style="padding: 15px" href="#">Cajas</a></li>
                 </ul>
               </li>
-              <li><a href="/tienda.html">Tienda</a></li>
-              <li><a href="/registroClientes.html">Registrate</a></li>
-              <li><a href="/contacto.html">Contáctanos</a></li>
+              <li><a href="../tienda.html">Tienda</a></li>
+              <li><a href="../registroClientes.html">Registrate</a></li>
+              <li><a href="../contacto.html">Contáctanos</a></li>
             </ul>
           </div>
         </nav>
@@ -49,55 +49,55 @@
     <div class="galeria">
         <div class="contenedor">
             <div class="imagen">
-                <img src="/Imagenes/chocoFresas/10Fresas.jpeg" alt="">
+                <img src="../Imagenes/chocoFresas/10Fresas.jpeg" alt="Fresa Chocolate">
                 <div class="overlay">
                     <h2>Comprar</h2>
                 </div>
             </div>
             <div class="imagen">
-                <img src="/Imagenes/chocoFresas/3Fresas.jpeg" alt="">
+                <img src="../Imagenes/chocoFresas/3Fresas.jpeg" alt="Fresa Chocolate">
                 <div class="overlay">
                     <h2>Comprar</h2>
                 </div>
             </div>
             <div class="imagen">
-                <img src="/Imagenes/chocoFresas/8Fresas.jpeg" alt="">
+                <img src="../Imagenes/chocoFresas/8Fresas.jpeg" alt="Fresa Chocolate">
                 <div class="overlay">
                     <h2>Comprar</h2>
                 </div>
             </div>
             <div class="imagen">
-                <img src="/Imagenes/chocoFresas/8Fresas_2.jpeg" alt="">
+                <img src="../Imagenes/chocoFresas/8Fresas_2.jpeg" alt="Fresa Chocolate">
                 <div class="overlay">
                     <h2>Comprar</h2>
                 </div>
             </div>
             <div class="imagen">
-                <img src="/Imagenes/chocoFresas/12Fresas.jpeg" alt="">
+                <img src="../Imagenes/chocoFresas/12Fresas.jpeg" alt="Fresa Chocolate">
                 <div class="overlay">
                     <h2>Comprar</h2>
                 </div>
             </div>
             <div class="imagen">
-                <img src="/Imagenes/chocoFresas/15Fresas_2.jpeg" alt="" height="10%">
+                <img src="../Imagenes/chocoFresas/15Fresas_2.jpeg" alt="Fresa Chocolate">
                 <div class="overlay">
                     <h2>Comprar</h2>
                 </div>
             </div>
             <div class="imagen">
-                <img src="/Imagenes/chocoFresas/15Fresas.jpeg" alt="">
+                <img src="../Imagenes/chocoFresas/15Fresas.jpeg" alt="Fresa Chocolate">
                 <div class="overlay">
                     <h2>Comprar</h2>
                 </div>
             </div>
             <div class="imagen">
-                <img src="/Imagenes/chocoFresas/canastaFresa.jpeg" alt="">
+                <img src="../Imagenes/chocoFresas/canastaFresa.jpeg" alt="Fresa Chocolate">
                 <div class="overlay">
                     <h2>Comprar</h2>
                 </div>
             </div>
             <div class="imagen">
-                <img src="/Imagenes/chocoFresas/cajaFresa.jpeg" alt="">
+                <img src="../Imagenes/chocoFresas/cajaFresa.jpeg" alt="Fresa Chocolate">
                 <div class="overlay">
                     <h2>Comprar</h2>
                 </div>
@@ -105,19 +105,19 @@
         </div>
         <div class="contenedorVertical">
             <div class="imagenVertical">
-                <img src="/Imagenes/chocoFresas/oreoFresas.jpeg" alt="">
+                <img src="../Imagenes/chocoFresas/oreoFresas.jpeg" alt="Fresa Chocolate">
                 <div class="overlay">
                     <h2>Comprar</h2>
                 </div>
             </div>
             <div class="imagenVertical">
-                <img src="/Imagenes/chocoFresas/6Fresas.jpeg" alt="">
+                <img src="../Imagenes/chocoFresas/6Fresas.jpeg" alt="Fresa Chocolate">
                 <div class="overlay">
                     <h2>Comprar</h2>
                 </div>
             </div>
             <div class="imagenVertical">
-                <img src="/Imagenes/chocoFresas/8Fresas_3.jpeg" alt="">
+                <img src="../Imagenes/chocoFresas/8Fresas_3.jpeg" alt="Fresa Chocolate">
                 <div class="overlay">
                     <h2>Comprar</h2>
                 </div>
@@ -129,8 +129,8 @@
 <footer>
     <div class="contenedor-footer">
       <div class="iconos">
-        <img class="IMG_footer" src="/Imagenes/instagram.svg">
-        <img class="IMG_footer" src="/Imagenes/facebook.svg">
+        <img class="IMG_footer" src="../Imagenes/instagram.svg">
+        <img class="IMG_footer" src="../Imagenes/facebook.svg">
       </div>
       <div class="textofooter">
         <h2 class="titulofooter">Dirección: Transversal 2c #14c 38. Villas del Sutagao. Fusagasugá-Cundinamarca</h2>
