--- a/Proyecto/contacto.html
+++ b/Proyecto/contacto.html
@@ -18,7 +18,7 @@
   <header>
     <div class="contenedor-header">
       <div class="contenedor-logo">
-        <img src="/Imagenes/Logo.png" height="180px" alt="Freya" style="float: left" /> 
+        <img src="Imagenes/Logo.png" height="180px" alt="Freya" style="float: left" /> 
       </div>
       <div class="contenedor-menu">
         <input type="checkbox" id="boton-menu" />
@@ -26,21 +26,21 @@
         <nav class="navegacion">
           <div>
             <ul class="menu">
-              <li><a href="/index.html">Inicio</a>
-              <li><a href="/galeria.html">Galeria</a>
+              <li><a href="index.html">Inicio</a>
+              <li><a href="galeria.html">Galeria</a>
                 <ul class="submenu">
-                  <li><a style="padding: 15px" href="/GaleriaHTML/chocoFresas.html">Choco Fresas</a></li>
-                  <li><a style="padding: 15px" href="/GaleriaHTML/corazones.html" >Corazones</a></li>
-                  <li><a style="padding: 15px" href="/GaleriaHTML/licores.html" >Bebidas</a></li>
-                  <li><a style="padding: 15px" href="/GaleriaHTML/chocoSorpresa.html">Choco Piñata</a></li>
-                  <li><a style="padding: 15px" href="/GaleriaHTML/tortaPaleta.html">Torta Paleta</a></li>
-                  <li><a style="padding: 15px" href="/GaleriaHTML/variedad.html">Figuras Especiales</a></li>
+                  <li><a style="padding: 15px" href="GaleriaHTML/chocoFresas.html">Choco Fresas</a></li>
+                  <li><a style="padding: 15px" href="GaleriaHTML/corazones.html" >Corazones</a></li>
+                  <li><a style="padding: 15px" href="GaleriaHTML/licores.html" >Bebidas</a></li>
+                  <li><a style="padding: 15px" href="GaleriaHTML/chocoSorpresa.html">Choco Piñata</a></li>
+                  <li><a style="padding: 15px" href="GaleriaHTML/tortaPaleta.html">Torta Paleta</a></li>
+                  <li><a style="padding: 15px" href="GaleriaHTML/variedad.html">Figuras Especiales</a></li>
                   <li><a style="padding: 15px" href="#">Cajas</a></li>
                 </ul>
               </li>
-              <li><a href="/tienda.html">Tienda</a></li>
-              <li><a href="/registroClientes.html">Registrate</a></li>
-              <li><a href="/contacto.html">Contáctanos</a></li>
+              <li><a href="tienda.html">Tienda</a></li>
+              <li><a href="registroClientes.html">Registrate</a></li>
+              <li><a href="contacto.html">Contáctanos</a></li>
             </ul>
           </div>
         </nav>
@@ -69,17 +69,14 @@
         <label for="mensaje">Mensaje</label>
         <textarea id="mensaje" name="mensaje" rows="15" cols="70" class="campo"></textarea><br><br>
       </div>
-      <input type="submit" id="Enviar" name="Enviar" class="enviar">
-                
-        </fieldset>
-    
+      <input type="submit" id="Enviar" name="enviar" class="boton">
     </form>
   </main>  
     <footer>
       <div class="contenedor-footer">
         <div class="iconos">
-          <img class="IMG_footer" src="/Imagenes/instagram.svg">
-          <img class="IMG_footer" src="/Imagenes/facebook.svg">
+          <img class="IMG_footer" src="Imagenes/instagram.svg">
+          <img class="IMG_footer" src="Imagenes/facebook.svg">
         </div>
         <div class="textofooter">
           <h2 class="titulofooter">Dirección: Transversal 2c #14c 38. Villas del Sutagao. Fusagasugá-Cundinamarca</h2>
