--- a/Proyecto/GaleriaHTML/variedad.html
+++ b/Proyecto/GaleriaHTML/variedad.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=, initial-scale=1.0">
     <title>Variedad - Freya</title>
-    <link rel="stylesheet" href="/CSS/galeriaIMG.css">
-    <link rel="stylesheet" href="/CSS/estilos.css">
+    <link rel="stylesheet" href="../CSS/galeriaIMG.css">
+    <link rel="stylesheet" href="../CSS/estilos.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Gluten:wght@500&family=Montserrat:wght@500&display=swap" rel="stylesheet">
@@ -15,7 +15,7 @@
 <header>
     <div class="contenedor-header">
       <div class="contenedor-logo">
-        <img src="/Imagenes/Logo.png" height="180px" alt="Freya" style="float: left" /> 
+        <img src="../Imagenes/Logo.png" height="180px" alt="Freya" style="float: left" /> 
       </div>
       <div class="contenedor-menu">
         <input type="checkbox" id="boton-menu" />
@@ -23,21 +23,21 @@
         <nav class="navegacion">
           <div>
             <ul class="menu">
-              <li><a href="/index.html">Inicio</a>
-              <li><a href="/galeria.html">Galeria</a>
+              <li><a href="../index.html">Inicio</a>
+              <li><a href="../galeria.html">Galeria</a>
                 <ul class="submenu">
-                  <li><a style="padding: 15px" href="/GaleriaHTML/chocoFresas.html">Choco Fresas</a></li>
-                  <li><a style="padding: 15px" href="/GaleriaHTML/corazones.html" >Corazones</a></li>
-                  <li><a style="padding: 15px" href="/GaleriaHTML/licores.html" >Bebidas</a></li>
-                  <li><a style="padding: 15px" href="/GaleriaHTML/chocoSorpresa.html">Choco Piñata</a></li>
-                  <li><a style="padding: 15px" href="/GaleriaHTML/tortaPaleta.html">Torta Paleta</a></li>
-                  <li><a style="padding: 15px" href="/GaleriaHTML/variedad.html">Figuras Especiales</a></li>
-                  <li><a style="padding: 15px" href="#">Cajas</a></li>
+                  <li><a style="padding: 15px" href="../GaleriaHTML/chocoFresas.html">Choco Fresas</a></li>
+                  <li><a style="padding: 15px" href="../GaleriaHTML/corazones.html" >Corazones</a></li>
+                  <li><a style="padding: 15px" href="../GaleriaHTML/licores.html" >Bebidas</a></li>
+                  <li><a style="padding: 15px" href="../GaleriaHTML/chocoSorpresa.html">Choco Piñata</a></li>
+                  <li><a style="padding: 15px" href="../GaleriaHTML/tortaPaleta.html">Torta Paleta</a></li>
+                  <li><a style="padding: 15px" href="../GaleriaHTML/variedad.html">Figuras Especiales</a></li>
+                  <li><a style="padding: 15px" href="../#">Cajas</a></li>
                 </ul>
               </li>
-              <li><a href="/tienda.html">Tienda</a></li>
-              <li><a href="/registroClientes.html">Registrate</a></li>
-              <li><a href="/contacto.html">Contáctanos</a></li>
+              <li><a href="../tienda.html">Tienda</a></li>
+              <li><a href="../registroClientes.html">Registrate</a></li>
+              <li><a href="../contacto.html">Contáctanos</a></li>
             </ul>
           </div>
         </nav>
@@ -48,37 +48,37 @@
     <div class="galeria">
       <div class="contenedorVariedad">
           <div class="imagen">
-              <img src="/Imagenes/variedad/variedad (1).jpeg" alt="">
+              <img src="../Imagenes/variedad/variedad (1).jpeg" alt="">
               <div class="overlay">
                   <h2>Comprar</h2>
               </div>
           </div>
           <div class="imagen">
-              <img src="/Imagenes/variedad/variedad (1).png" alt="">
+              <img src="../Imagenes/variedad/variedad (1).png" alt="">
               <div class="overlay">
                   <h2>Comprar</h2>
               </div>
           </div>
           <div class="imagen">
-              <img src="/Imagenes/variedad/variedad (2).jpeg" alt="">
+              <img src="../Imagenes/variedad/variedad (2).jpeg" alt="">
               <div class="overlay">
                   <h2>Comprar</h2>
               </div>
           </div>
           <div class="imagen">
-              <img src="/Imagenes/variedad/variedad (2).png" alt="">
+              <img src="../Imagenes/variedad/variedad (2).png" alt="">
               <div class="overlay">
                   <h2>Comprar</h2>
               </div>
           </div>
           <div class="imagen">
-              <img src="/Imagenes/variedad/variedad (3).jpeg" alt="">
+              <img src="../Imagenes/variedad/variedad (3).jpeg" alt="">
               <div class="overlay">
                   <h2>Comprar</h2>
               </div>
           </div>
           <div class="imagen">
-              <img src="/Imagenes/variedad/variedad (4).jpeg" alt="">
+              <img src="../Imagenes/variedad/variedad (4).jpeg" alt="">
               <div class="overlay">
                   <h2>Comprar</h2>
               </div>
@@ -90,8 +90,8 @@
 <footer>
   <div class="contenedor-footer">
     <div class="iconos">
-      <img class="IMG_footer" src="/Imagenes/instagram.svg">
-      <img class="IMG_footer" src="/Imagenes/facebook.svg">
+      <img class="IMG_footer" src="../Imagenes/instagram.svg">
+      <img class="IMG_footer" src="../Imagenes/facebook.svg">
     </div>
     <div class="textofooter">
       <h2 class="titulofooter">Dirección: Transversal 2c #14c 38. Villas del Sutagao. Fusagasugá-Cundinamarca</h2>
