--- a/Proyecto/galeria.html
+++ b/Proyecto/galeria.html
@@ -7,7 +7,7 @@
     <title>Galeria - Freya</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
     <link href="CSS/estilos.css" rel="stylesheet">
-    <link href="/CSS/galeriaIMG.css" rel="stylesheet">
+    <link href="CSS/galeriaIMG.css" rel="stylesheet">
     <!-- Las siguientes 3 líneas corresponden a la asignación de estilo de letra desde Google Fonts-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -18,7 +18,7 @@
     <header>
       <div class="contenedor-header">
         <div class="contenedor-logo">
-          <img src="/Imagenes/Logo.png" height="180px" alt="Freya" style="float: left" /> 
+          <img src="Imagenes/Logo.png" height="180px" alt="Freya" style="float: left" /> 
         </div>
         <div class="contenedor-menu">
           <input type="checkbox" id="boton-menu" />
@@ -26,21 +26,21 @@
           <nav class="navegacion">
             <div>
               <ul class="menu">
-                <li><a href="/index.html" >Inicio</a>
-                <li><a href="/galeria.html" >Galeria</a>
+                <li><a href="index.html" >Inicio</a>
+                <li><a href="galeria.html" >Galeria</a>
                   <ul class="submenu">
-                    <li><a style="padding: 15px" href="/GaleriaHTML/chocoFresas.html">Choco Fresas</a></li>
-                    <li><a style="padding: 15px" href="/GaleriaHTML/corazones.html" >Corazones</a></li>
-                    <li><a style="padding: 15px" href="/GaleriaHTML/licores.html" >Bebidas</a></li>
-                    <li><a style="padding: 15px" href="/GaleriaHTML/chocoSorpresa.html">Choco Piñata</a></li>
-                    <li><a style="padding: 15px" href="/GaleriaHTML/tortaPaleta.html">Torta Paleta</a></li>
-                    <li><a style="padding: 15px" href="/GaleriaHTML/variedad.html">Figuras Especiales</a></li>
+                    <li><a style="padding: 15px" href="GaleriaHTML/chocoFresas.html">Choco Fresas</a></li>
+                    <li><a style="padding: 15px" href="GaleriaHTML/corazones.html" >Corazones</a></li>
+                    <li><a style="padding: 15px" href="GaleriaHTML/licores.html" >Bebidas</a></li>
+                    <li><a style="padding: 15px" href="GaleriaHTML/chocoSorpresa.html">Choco Piñata</a></li>
+                    <li><a style="padding: 15px" href="GaleriaHTML/tortaPaleta.html">Torta Paleta</a></li>
+                    <li><a style="padding: 15px" href="GaleriaHTML/variedad.html">Figuras Especiales</a></li>
                     <li><a style="padding: 15px" href="#">Cajas</a></li>
                   </ul>
                 </li>
-                <li><a href="/tienda.html" >Tienda</a></li>
-                <li><a href="/registroClientes.html" >Registrate</a></li>
-                <li><a href="/contacto.html">Contáctanos</a></li>
+                <li><a href="tienda.html" >Tienda</a></li>
+                <li><a href="registroClientes.html" >Registrate</a></li>
+                <li><a href="contacto.html">Contáctanos</a></li>
               </ul>
             </div>
           </nav>
@@ -51,39 +51,39 @@
       <div class="galeria">
         <div class="contenedorInicial">
             <div class="imagen">
-              <img src="/Imagenes/chocoFresas/10Fresas.jpeg" alt="">
+              <img src="Imagenes/chocoFresas/10Fresas.jpeg" alt="">
                 <div class="overlay">
-                  <a href="/GaleriaHTML/chocoFresas.html"><h2>Choco Fresas</h2></a>
+                  <a href="GaleriaHTML/chocoFresas.html"><h2>Choco Fresas</h2></a>
                 </div>
             </div>
             <div class="imagen">
-              <img src="/Imagenes/corazones/corazon (2).jpeg" alt="">
+              <img src="Imagenes/corazones/corazon (2).jpeg" alt="">
               <div class="overlay">
-                <a href="/GaleriaHTML/corazones.html"><h2>Corazones Rellenos</h2></a>
+                <a href="GaleriaHTML/corazones.html"><h2>Corazones Rellenos</h2></a>
               </div>
             </div>
             <div class="imagen">
-              <img src="/Imagenes/licores/licor15.png" alt="">
+              <img src="Imagenes/licores/licor15.png" alt="">
               <div class="overlay">
-                <a href="/GaleriaHTML/licores.html"><h2>Bebidas</h2></a>
+                <a href="GaleriaHTML/licores.html"><h2>Bebidas</h2></a>
               </div>
             </div>
             <div class="imagen">
-              <img src="/Imagenes/chocoSorpresa/unicornioSorpresa.jpeg" alt="">
+              <img src="Imagenes/chocoSorpresa/unicornioSorpresa.jpeg" alt="">
               <div class="overlay">
-                <a href="/GaleriaHTML/chocoSorpresa.html"><h2>Choco Piñata</h2></a>
+                <a href="GaleriaHTML/chocoSorpresa.html"><h2>Choco Piñata</h2></a>
               </div>
             </div>
             <div class="imagen">
-              <img src="/Imagenes/tortaPaleta/tortaPaleta (6).png" alt="">
+              <img src="Imagenes/tortaPaleta/tortaPaleta (6).png" alt="">
               <div class="overlay">
-                <a href="/GaleriaHTML/tortaPaleta.html"><h2>Torta Paleta</h2></a>
+                <a href="GaleriaHTML/tortaPaleta.html"><h2>Torta Paleta</h2></a>
               </div>
             </div>
             <div class="imagen">
-              <img src="/Imagenes/variedad/variedad (4).jpeg" alt="">
+              <img src="Imagenes/variedad/variedad (4).jpeg" alt="">
               <div class="overlay">
-                <a href="/GaleriaHTML/variedad.html"><h2>Variedad</h2></a>
+                <a href="GaleriaHTML/variedad.html"><h2>Variedad</h2></a>
               </div>
             </div>
           </div>
@@ -92,8 +92,8 @@
     <footer>
       <div class="contenedor-footer">
         <div class="iconos">
-          <img class="IMG_footer" src="/Imagenes/instagram.svg">
-          <img class="IMG_footer" src="/Imagenes/facebook.svg">
+          <img class="IMG_footer" src="Imagenes/instagram.svg">
+          <img class="IMG_footer" src="Imagenes/facebook.svg">
         </div>
         <div class="textofooter">
           <h2 class="titulofooter">Dirección: Transversal 2c #14c 38. Villas del Sutagao. Fusagasugá-Cundinamarca</h2>
