--- a/Proyecto/index.html
+++ b/Proyecto/index.html
@@ -17,7 +17,7 @@
     <header>
       <div class="contenedor-header">
         <div class="contenedor-logo">
-          <img src="/Imagenes/Logo.png" height="180px" alt="Freya" style="float: left" /> 
+          <img src="Imagenes/Logo.png" height="180px" alt="Freya" style="float: left" /> 
         </div>
         <div class="contenedor-menu">
           <input type="checkbox" id="boton-menu" />
@@ -25,20 +25,20 @@
           <nav class="navegacion">
             <div>
               <ul class="menu">
-                <li><a href="/galeria.html">Galeria</a>
+                <li><a href="galeria.html">Galeria</a>
                   <ul class="submenu">
-                    <li><a style="padding: 15px" href="/GaleriaHTML/chocoFresas.html">Choco Fresas</a></li>
-                    <li><a style="padding: 15px" href="/GaleriaHTML/corazones.html" >Corazones</a></li>
-                    <li><a style="padding: 15px" href="/GaleriaHTML/licores.html" >Bebidas</a></li>
-                    <li><a style="padding: 15px" href="/GaleriaHTML/chocoSorpresa.html">Choco Piñata</a></li>
-                    <li><a style="padding: 15px" href="/GaleriaHTML/tortaPaleta.html">Torta Paleta</a></li>
-                    <li><a style="padding: 15px" href="/GaleriaHTML/variedad.html">Figuras Especiales</a></li>
+                    <li><a style="padding: 15px" href="GaleriaHTML/chocoFresas.html">Choco Fresas</a></li>
+                    <li><a style="padding: 15px" href="GaleriaHTML/corazones.html" >Corazones</a></li>
+                    <li><a style="padding: 15px" href="GaleriaHTML/licores.html" >Bebidas</a></li>
+                    <li><a style="padding: 15px" href="GaleriaHTML/chocoSorpresa.html">Choco Piñata</a></li>
+                    <li><a style="padding: 15px" href="GaleriaHTML/tortaPaleta.html">Torta Paleta</a></li>
+                    <li><a style="padding: 15px" href="GaleriaHTML/variedad.html">Figuras Especiales</a></li>
                     <li><a style="padding: 15px" href="#">Cajas</a></li>
                   </ul>
                 </li>
-                <li><a href="/tienda.html">Tienda</a></li>
-                <li><a href="/registroClientes.html">Registrate</a></li>
-                <li><a href="/contacto.html">Contáctanos</a></li>
+                <li><a href="tienda.html">Tienda</a></li>
+                <li><a href="registroClientes.html">Registrate</a></li>
+                <li><a href="contacto.html">Contáctanos</a></li>
               </ul>
             </div>
           </nav>
@@ -63,8 +63,8 @@
       <section class="contendorVideo">
         <div class="video">
           <video width="500" height="500" autoplay controls loop muted>
-            <source src="/Video/fresaCerveza.mp4">
-            <source scr="/Video/fresaCerveza.ogv">
+            <source src="Video/fresaCerveza.mp4">
+            <source scr="Video/fresaCerveza.ogv">
           </video>
         </div>
         <div class="textWhatsapp">
