--- a/Proyecto/registroClientes.html
+++ b/Proyecto/registroClientes.html
@@ -5,11 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE-Edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Clientes - Dulces Creaciones</title>
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css"
-    />
-    <link href="CSS/estilos.css" rel="stylesheet" />
+    <!--<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css"/>-->
+    <link href="../CSS/estilos.css" rel="stylesheet" />
     <!-- Las siguientes 3 líneas corresponden a la asignación de estilo de letra desde Google Fonts-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -20,7 +17,7 @@
     <header>
       <div class="contenedor-header">
         <div class="contenedor-logo">
-          <img src="/Imagenes/Logo.png" height="180px" alt="Freya" style="float: left" /> 
+          <img src="../Imagenes/Logo.png" height="180px" alt="Freya" style="float: left" /> 
         </div>
         <div class="contenedor-menu">
           <input type="checkbox" id="boton-menu" />
@@ -28,21 +25,21 @@
           <nav class="navegacion">
             <div>
               <ul class="menu">
-                <li><a href="/index.html">Inicio</a>
-                <li><a href="/galeria.html">Galeria</a>
+                <li><a href="../index.html">Inicio</a>
+                <li><a href="../galeria.html">Galeria</a>
                   <ul class="submenu">
-                    <li><a style="padding: 15px" href="/GaleriaHTML/chocoFresas.html">Choco Fresas</a></li>
-                    <li><a style="padding: 15px" href="/GaleriaHTML/corazones.html" >Corazones</a></li>
-                    <li><a style="padding: 15px" href="/GaleriaHTML/licores.html" >Bebidas</a></li>
-                    <li><a style="padding: 15px" href="/GaleriaHTML/chocoSorpresa.html">Choco Piñata</a></li>
-                    <li><a style="padding: 15px" href="/GaleriaHTML/tortaPaleta.html">Torta Paleta</a></li>
-                    <li><a style="padding: 15px" href="/GaleriaHTML/variedad.html">Figuras Especiales</a></li>
+                    <li><a style="padding: 15px" href="../GaleriaHTML/chocoFresas.html">Choco Fresas</a></li>
+                    <li><a style="padding: 15px" href="../GaleriaHTML/corazones.html" >Corazones</a></li>
+                    <li><a style="padding: 15px" href="../GaleriaHTML/licores.html" >Bebidas</a></li>
+                    <li><a style="padding: 15px" href="../GaleriaHTML/chocoSorpresa.html">Choco Piñata</a></li>
+                    <li><a style="padding: 15px" href="../GaleriaHTML/tortaPaleta.html">Torta Paleta</a></li>
+                    <li><a style="padding: 15px" href="../GaleriaHTML/variedad.html">Figuras Especiales</a></li>
                     <li><a style="padding: 15px" href="#">Cajas</a></li>
                   </ul>
                 </li>
-                <li><a href="/tienda.html">Tienda</a></li>
-                <li><a href="/registroClientes.html">Registrate</a></li>
-                <li><a href="/contacto.html">Contáctanos</a></li>
+                <li><a href="../tienda.html">Tienda</a></li>
+                <li><a href="../registroClientes.html">Registrate</a></li>
+                <li><a href="../contacto.html">Contáctanos</a></li>
               </ul>
             </div>
           </nav>
@@ -51,89 +48,67 @@
     </header>
 
     <main>
-      <div
-        class="fondo"
-        style="background-image: url(Imagenes/manoschocoles.png)"
-      >
-        <section class="section">
-          <form class="form">
-            <fieldset>
-              <legend class="legend">Datos Personales</legend>
-              <br />
-              <label class="label" for="nombre">Nombre</label><br />
-              <input
-                type="text"
-                id="nombre"
-                name="nombre"
-                placeholder="Escribe nombre"
-                required="true"
-                class="campo"
-              /><br /><br />
-
-              <label class="label" for="apellido">Apellido</label><br />
-              <input
-                type="text"
-                id="apellido"
-                name="apellido"
-                placeholder="Escribe apellido"
-                required="true"
-                class="campo"
-              /><br /><br />
-
-              <label class="label" for="documento">Tipo Documento</label><br />
-              <select id="documento" name="documento" class="campo">
-                <option class="label" value="CC" selected>CC</option>
-                <option class="label" value="CE">CE</option>
-                <option class="label" value="PP">PP</option></select
-              ><br /><br />
-
-              <label class="label" for="numdoc">No. Documento</label><br />
-              <input
-                type="number"
-                id="numdoc"
-                name="numdoc"
-                class="campo"
-              /><br /><br />
-
-              <label class="label">Genero</label><br />
-              <input
-                type="radio"
-                id="femenino"
-                name="genero"
-                value="femenino"
-                class="campo"
-              />
-              <label for="femenino">femenino</label><br />
-              <input
-                type="radio"
-                id="masculino"
-                name="genero"
-                value="masculino"
-                class="campo"
-              />
-              <label for="masculino">masculino</label><br /><br />
-
-              <label class="label" for="email">Email</label><br />
-              <input
-                type="email"
-                id="email"
-                name="email"
-                class="campo"
-              /><br /><br />
-
-              <input class="botones" type="submit" value="Enviar" />
-              <input class="botones" type="reset" value="Limpiar" /><br /><br />
-            </fieldset>
-          </form>
-        </section>
+      <div>
+        <form class="contacto">
+          <fieldset>
+            <section class="tituloFormulario">
+              <h2>Datos Personales</h2>
+            </section>
+            <div class="grupo">
+              <label for="usuario">Usuario</label>
+              <input type="text" id="usuario" name="usuario" class="campo">
+            </div>
+            <div class="grupo">
+              <label for="password">Contraseña</label>
+              <input type="text" id="password" name="password" class="campo" >
+            </div>
+            <div class="grupo">
+              <label for="nombreReg">Nombre</label>
+              <input type="text" id="nombreReg" name="nombreReg" class="campo">
+            </div>
+            <div class="grupo">
+              <label for="apellidoReg">Apellido</label>
+              <input type="text" id="apellidoReg" name="apellidoReg" class="campo">
+            </div>
+            <div class="grupo">
+              <label for="documento">Tipo Documento</label><br />
+              <select id="documento" name="documento" class="selectDto">
+                <option value="CC" selected>Cedula Ciudadania</option>
+                <option value="CE">Cedula Extranjera</option>
+                <option value="PP">Pasaporte</option>
+              </select>
+            </div>
+            <div class="grupo">
+              <label for="numDoc">Documento</label>
+              <input type="number" id="numDoc" name="numDoc" class="campo">
+            </div>
+            <div class="grupo">
+              <label for="genero">Genero</label>
+              <select id="genero" name="genero" class="selectDto">
+                <option value="fem" selected>Femenino</option>
+                <option value="mas">Masculino</option>
+              </select>
+            </div>
+            <div class="grupo">
+              <label for="email">Email</label>
+              <input type="email" id="email" name="email" class="campo"/>
+            </div>
+            <div class="boton">
+              <input type="submit" id="registro" name="registrar" />
+            </div>
+            <div class="boton">
+              <input type="reset" id="reset" name="reset"/>
+            </div>
+          </fieldset>
+        </form>
       </div>
     </main>
 
     <footer>
       <div class="contenedor-footer">
         <div class="iconos">
-          <img class="IMG_footer" src="/Imagenes/instagram.svg">
-          <img class="IMG_footer" src="/Imagenes/facebook.svg">
+          <img class="IMG_footer" src="../Imagenes/instagram.svg">
+          <img class="IMG_footer" src="../Imagenes/facebook.svg">
         </div>
         <div class="textofooter">
           <h2 class="titulofooter">Dirección: Transversal 2c #14c 38. Villas del Sutagao. Fusagasugá-Cundinamarca</h2>
