Finalizar estilos de pagina

--- a/Proyecto/index.html
+++ b/Proyecto/index.html
@@ -68,7 +68,7 @@
           </video>
         </div>
         <div class="textWhatsapp">
-          <h2>Personaliza cada detalle seleccionando color, frase, motivo, productos, licor, globo, dulce, relleno</h2>
+          <h2>Personaliza cada detalle seleccionando color, frase, motivo, producto, licor, globo, dulce, relleno</h2>
           <h3>Haz tu pedido por WhatSapp 3132371940</h3>
           <h4>Un asesor te guiará</h4>
         </div>
