--- a/Proyecto/contacto.html
+++ b/Proyecto/contacto.html
@@ -47,29 +47,32 @@
       </div>
     </div>
   </header>
-    
+
   <main>
     <section class="tituloFormulario">
       <h2>Contáctanos</h2>
     </section>
+    
     <form class="contacto">
-      <div class="grupo">
-        <label for="nombre">Nombre completo</label>
-        <input type="text" id="nombre" name="nombre" class="campo">
-      </div>
-      <div class="grupo">
-        <label for="correo">Email</label>
-        <input type="email" id="correo" name="Correo" class="campo">
-      </div>
-      <div class="grupo">
-        <label for="telefono">Telefono/Celular</label><br>
-        <input type="number" id="telefono" name="telefono" class="campo">
-      </div>
-      <div class="grupo">
-        <label for="mensaje">Mensaje</label>
-        <textarea id="mensaje" name="mensaje" rows="15" cols="70" class="campo"></textarea><br><br>
-      </div>
-      <input type="submit" id="Enviar" name="enviar" class="boton">
+      <fieldset>
+        <div class="grupo">
+          <label for="nombre">Nombre completo</label>
+          <input type="text" id="nombre" name="nombre" class="campo">
+        </div>
+        <div class="grupo">
+          <label for="email">Email</label>
+          <input type="email" id="email" name="email" class="campo">
+        </div>
+        <div class="grupo">
+          <label for="telefono">Telefono/Celular</label><br>
+          <input type="number" id="telefono" name="telefono" class="campo">
+        </div>
+        <div class="grupo">
+          <label for="mensaje">Mensaje</label>
+          <textarea id="mensaje" name="mensaje" rows="15" cols="70" class="campo"></textarea><br><br>
+        </div>
+        <input type="submit" id="Enviar" name="enviar" class="boton">
+      </fieldset>
     </form>
   </main>  
     <footer>
