modificar el diseño de los botones de registro clientes

--- a/Proyecto/registroClientes.html
+++ b/Proyecto/registroClientes.html
@@ -93,11 +93,11 @@
               <label for="email">Email</label>
               <input type="email" id="email" name="email" class="campo"/>
             </div>
-            <div class="boton">
-              <input type="submit" id="registro" name="registrar" />
+            <div>
+              <input class="boton" type="submit" id="registro" name="registrar"/>
             </div>
-            <div class="boton">
-              <input type="reset" id="reset" name="reset"/>
+            <div>
+              <input class="boton" type="reset" id="reset" name="reset"/>
             </div>
           </fieldset>
         </form>
