se actualiza registro de clientes

--- a/Proyecto/registroClientes.html
+++ b/Proyecto/registroClientes.html
@@ -55,13 +55,26 @@
               <h2>Datos Personales</h2>
             </section>
             <div class="grupo">
-              <label for="usuario">Usuario</label>
-              <input type="text" id="usuario" name="usuario" class="campo">
+              <label for="email">Usuario/Email</label>
+              <input type="email" id="email" name="email" class="campo"/>
+            </div>
+            <div class="grupo">
+              <label for="nombreReg">Nombre</label>
+              <input type="text" id="nombreReg" name="nombreReg" class="campo">
+            </div>
+            <div class="grupo">
+              <label for="apellidoReg">Apellido</label>
+              <input type="text" id="apellidoReg" name="apellidoReg" class="campo">
             </div>
             <div class="grupo">
               <label for="password">Contraseña</label>
               <input type="text" id="password" name="password" class="campo" >
             </div>
+            <div class="grupo">
+              <label for="password">Confirme la Contraseña</label>
+              <input type="text" id="password" name="password" class="campo" >
+            </div>
+            <!--
             <div class="grupo">
               <label for="nombreReg">Nombre</label>
               <input type="text" id="nombreReg" name="nombreReg" class="campo">
@@ -89,10 +102,7 @@
                 <option value="mas">Masculino</option>
               </select>
             </div>
-            <div class="grupo">
-              <label for="email">Email</label>
-              <input type="email" id="email" name="email" class="campo"/>
-            </div>
+          -->
             <div>
               <input class="boton" type="submit" id="registro" name="registrar"/>
             </div>
