--- a/Proyecto/galeria.html
+++ b/Proyecto/galeria.html
@@ -15,39 +15,40 @@
     <!-- -->
   </head>
   <body>
-    <header>
-      <div class="contenedor-header">
-        <div class="contenedor-logo">
-          <img src="Imagenes/Logo.png" height="180px" alt="Freya" style="float: left" /> 
-        </div>
-        <div class="contenedor-menu">
-          <input type="checkbox" id="boton-menu" />
-          <label for="boton-menu"><i class="bi bi-list"></i></label>
-          <nav class="navegacion">
-            <div>
-              <ul class="menu">
-                <li><a href="index.html" >Inicio</a>
-                <li><a href="galeria.html" >Galeria</a>
-                  <ul class="submenu">
-                    <li><a style="padding: 15px" href="GaleriaHTML/chocoFresas.html">Choco Fresas</a></li>
-                    <li><a style="padding: 15px" href="GaleriaHTML/corazones.html" >Corazones</a></li>
-                    <li><a style="padding: 15px" href="GaleriaHTML/licores.html" >Bebidas</a></li>
-                    <li><a style="padding: 15px" href="GaleriaHTML/chocoSorpresa.html">Choco Piñata</a></li>
-                    <li><a style="padding: 15px" href="GaleriaHTML/tortaPaleta.html">Torta Paleta</a></li>
-                    <li><a style="padding: 15px" href="GaleriaHTML/variedad.html">Figuras Especiales</a></li>
-                    <li><a style="padding: 15px" href="#">Cajas</a></li>
-                  </ul>
-                </li>
-                <li><a href="tienda.html" >Tienda</a></li>
-                <li><a href="registroClientes.html" >Registrate</a></li>
-                <li><a href="contacto.html">Contáctanos</a></li>
-              </ul>
+    <div class="containerPage">
+      <header>
+        <div class="contenedor-header">
+          <div class="contenedor-logo">
+            <img src="../Imagenes/Logo.png" height="180px" alt="Freya" style="float: left" /> 
+          </div>
+          <div class="contenedor-menu">
+            <input type="checkbox" id="boton-menu" />
+            <div class="contenedor_icon-menu">
+              <label for="boton-menu"><i class="icon-menu bi bi-list"></i>
             </div>
-          </nav>
+            <nav class="navegacion">
+                <ul class="menu">
+                  <li><a href="../index.html">Inicio</a>
+                  <li><a href="../galeria.html">Galeria</a>
+                    <ul class="submenu">
+                      <li><a style="padding: 15px" href="../GaleriaHTML/chocoFresas.html">Choco Fresas</a></li>
+                      <li><a style="padding: 15px" href="../GaleriaHTML/corazones.html" >Corazones</a></li>
+                      <li><a style="padding: 15px" href="../GaleriaHTML/licores.html" >Bebidas</a></li>
+                      <li><a style="padding: 15px" href="../GaleriaHTML/chocoSorpresa.html">Choco Piñata</a></li>
+                      <li><a style="padding: 15px" href="../GaleriaHTML/tortaPaleta.html">Torta Paleta</a></li>
+                      <li><a style="padding: 15px" href="../GaleriaHTML/variedad.html">Figuras Especiales</a></li>
+                    </ul>
+                  </li>
+                  <li><a href="../tienda.html">Tienda</a></li>
+                  <li><a href="../registroClientes.html">Registrate</a></li>
+                  <li><a href="../contacto.html">Contáctanos</a></li>
+                </ul>
+            </nav>
+          </div>
         </div>
-      </div>
-    </header>
+      </header>
     <main>
+      <div class="container-main">
       <div class="galeria">
         <div class="contenedorInicial">
             <div class="imagen">
@@ -88,6 +89,7 @@
             </div>
           </div>
       </div>
+    </div>
     </main>
     <footer>
       <div class="contenedor-footer">
@@ -103,5 +105,6 @@
 
       </div>
     </footer>
+  </div>
   </body>
 </html>
