--- a/Proyecto/tienda.html
+++ b/Proyecto/tienda.html
@@ -14,40 +14,40 @@
     <!-- -->
 </head>
 <body>
-  <header>
-    <div class="contenedor-header">
-      <div class="contenedor-logo">
-        <img src="Imagenes/Logo.png" height="180px" alt="Freya" style="float: left" /> 
-      </div>
-      <div class="contenedor-menu">
-        <input type="checkbox" id="boton-menu" />
-        <label for="boton-menu"><i class="bi bi-list"></i></label>
-        <nav class="navegacion">
-          <div>
-            <ul class="menu">
-              <li><a href="index.html">Inicio</a>
-              <li><a href="galeria.html">Galeria</a>
-                <ul class="submenu">
-                  <li><a style="padding: 15px" href="GaleriaHTML/chocoFresas.html">Choco Fresas</a></li>
-                  <li><a style="padding: 15px" href="GaleriaHTML/corazones.html" >Corazones</a></li>
-                  <li><a style="padding: 15px" href="GaleriaHTML/licores.html" >Bebidas</a></li>
-                  <li><a style="padding: 15px" href="GaleriaHTML/chocoSorpresa.html">Choco Piñata</a></li>
-                  <li><a style="padding: 15px" href="GaleriaHTML/tortaPaleta.html">Torta Paleta</a></li>
-                  <li><a style="padding: 15px" href="GaleriaHTML/variedad.html">Figuras Especiales</a></li>
-                  <li><a style="padding: 15px" href="#">Cajas</a></li>
-                </ul>
-              </li>
-              <li><a href="tienda.html">Tienda</a></li>
-              <li><a href="registroClientes.html">Registrate</a></li>
-              <li><a href="contacto.html">Contáctanos</a></li>
-            </ul>
+  <div class="containerPage">
+    <header>
+      <div class="contenedor-header">
+        <div class="contenedor-logo">
+          <img src="../Imagenes/Logo.png" height="180px" alt="Freya" style="float: left" /> 
+        </div>
+        <div class="contenedor-menu">
+          <input type="checkbox" id="boton-menu" />
+          <div class="contenedor_icon-menu">
+            <label for="boton-menu"><i class="icon-menu bi bi-list"></i>
           </div>
-        </nav>
+          <nav class="navegacion">
+              <ul class="menu">
+                <li><a href="../index.html">Inicio</a>
+                <li><a href="../galeria.html">Galeria</a>
+                  <ul class="submenu">
+                    <li><a style="padding: 15px" href="../GaleriaHTML/chocoFresas.html">Choco Fresas</a></li>
+                    <li><a style="padding: 15px" href="../GaleriaHTML/corazones.html" >Corazones</a></li>
+                    <li><a style="padding: 15px" href="../GaleriaHTML/licores.html" >Bebidas</a></li>
+                    <li><a style="padding: 15px" href="../GaleriaHTML/chocoSorpresa.html">Choco Piñata</a></li>
+                    <li><a style="padding: 15px" href="../GaleriaHTML/tortaPaleta.html">Torta Paleta</a></li>
+                    <li><a style="padding: 15px" href="../GaleriaHTML/variedad.html">Figuras Especiales</a></li>
+                  </ul>
+                </li>
+                <li><a href="../tienda.html">Tienda</a></li>
+                <li><a href="../registroClientes.html">Registrate</a></li>
+                <li><a href="../contacto.html">Contáctanos</a></li>
+              </ul>
+          </nav>
+        </div>
       </div>
-    </div>
-  </header>
-    <main width: 100%>
-        
+    </header>
+    <main>
+      <div class="container-main">
         <div style="border-radius: 20px; border-color: #ffc8dd; width: 100%; height: 300px">
             <p>Aqui irá la imagen que está seleccionando</p>
         </div>
@@ -70,6 +70,7 @@
                 </tr>
             </table>
         </div>
+      </div>
     </main>
     <footer>
       <div class="contenedor-footer">
@@ -84,5 +85,6 @@
         </div>
       </div>
     </footer>
+    </div>
 </body>
 </html>
